<resources>
    <string name="app_name">MadCapstoneProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="exercisetimehint">60</string>
    <string name="createexercisetitle">title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workoutName">Workout Name</string>
    <string name="addexercisebuttontext">Add</string>
    <string name="AddWorkoutText">Add workout</string>
    <string name="Rounds">Rounds</string>
    <string name="CurrentExercise">Current Exercise</string>
    <string name="ExerciseTime">Time Left</string>
    <string name="nextExercise">Next Exercise</string>
    <string name="startworkout">Start Workout</string>
    <string name="editworkout">Edit Workout</string>
    <string name="snackbarnotitleortime">You forgot to input a title or time</string>
    <string name="saveworkoutbutton">Save Workout</string>
    <string name="editworkouttitle">\"Edit \"</string>
    <string name="createworkouttitle">Create Workout</string>
    <string name="createexercisetitletext">Create Exercise</string>
    <string name="snackbarcreateworkout">You forgot to input exercises or rounds or a title.</string>
    <string name="activityroundtext">\"Round: \"</string>
    <string name="dashbetweenroundtext">\" / \"</string>
    <string name="fragmentworkouttitle">Workouts</string>
</resources>