<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateWorkoutFragment"
    >

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/rv_workout_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_workoutname"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:hint="@string/workoutName"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_workout"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="32dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRounds"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Rounds"
            android:inputType="number"
            android:textSize="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_workout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/AddWorkoutText"
            android:textSize="10dp"
            tools:layout_editor_absoluteX="321dp"
            tools:layout_editor_absoluteY="21dp" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_workout_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>