<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WorkoutActivityFragment">

    <TextView
        android:id="@+id/tvi_Activity_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ExerciseTime"
        app:layout_constraintBottom_toTopOf="@+id/tv_Activity_Time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Activity_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="64dp"
        app:layout_constraintBottom_toTopOf="@+id/tvi_Activity_Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvi_Activity_Time" />

    <TextView
        android:id="@+id/tvi_Activity_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CurrentExercise"
        app:layout_constraintBottom_toTopOf="@+id/tv_Activity_Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Activity_Time" />

    <TextView
        android:id="@+id/tv_Activity_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="extViewT"
        android:textSize="48dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Activity_Round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvi_Activity_Title" />

    <TextView
        android:id="@+id/tv_Activity_Round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tvi_Activity_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Activity_Title" />

    <TextView
        android:id="@+id/tvi_Activity_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextExercise"
        app:layout_constraintBottom_toTopOf="@+id/tv_Activity_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Activity_Round" />

    <TextView
        android:id="@+id/tv_Activity_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvi_Activity_next" />
</androidx.constraintlayout.widget.ConstraintLayout>